--- a/style.css
+++ b/style.css
@@ -27,6 +27,22 @@ body{
     margin-left: 280px;
     margin-top: 340px;
   }
+
+  
+  .image3 {
+      position: absolute;
+      margin-top:30px;
+      margin-left: 400px;
+      
+  }
+
+  .image4 {
+    position: absolute;
+    z-index: 3;
+    margin-left: 280px;
+    margin-top: 340px;
+  }
+  
  
 .parent {
  
@@ -35,14 +51,13 @@ body{
       width: 100%;
       height: 500px;
       background-size: cover;
-      
  
   }
 
 .playgame{
     background-color: gold;
     
-}
+  }
 
   .feedme{
       background-color:lightblue;
@@ -58,3 +73,10 @@ body{
 
   }
   
+  .image2{
+      height:20%;
+
+  }
+  
+
+ 
